Combine DirectAPI and ProxiedAPI into a single API, which can be switched between using the UseWCF setting in Web.config

--- a/LiiteriStatisticsAPI/Properties/AssemblyInfo.cs.tmpl
+++ b/LiiteriStatisticsAPI/Properties/AssemblyInfo.cs.tmpl
@@ -5,11 +5,11 @@ using System.Runtime.InteropServices;
 // General Information about an assembly is controlled through the following 
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
-[assembly: AssemblyTitle("LiiteriStatisticsProxiedAPI")]
+[assembly: AssemblyTitle("LiiteriStatisticsAPI")]
 [assembly: AssemblyDescription("")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("LiiteriStatisticsProxiedAPI")]
+[assembly: AssemblyProduct("LiiteriStatisticsAPI")]
 [assembly: AssemblyCopyright("Copyright ©  2015")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
@@ -20,7 +20,7 @@ using System.Runtime.InteropServices;
 [assembly: ComVisible(false)]
 
 // The following GUID is for the ID of the typelib if this project is exposed to COM
-[assembly: Guid("2945876c-cdca-4ad9-b122-991b3e9e9058")]
+[assembly: Guid("79a55bde-8c04-463b-984e-600d9c8fa6e9")]
 
 // Version information for an assembly consists of the following four values:
 //
