--- a/Data/templates/StatisticsQuery/DerivedDivided.tmpl
+++ b/Data/templates/StatisticsQuery/DerivedDivided.tmpl
@@ -4,12 +4,13 @@
  * 0 Fields
  * 1 From
  * 2 Where
- * 3 Group
+ * 3 MainGroups
  * 4 Order
  * 5 MainIdColumn
-
- * [removed] 6 SubIdColumn
- * [removed] 7 SubFromString
+ * 6 SubIdColumn
+ * 7 InnerJoinQuery
+ * 8 SubGroups
+ * 9 FilterJoins
  */
 
 DECLARE @NumeratorId INT -- Osoittaja
@@ -29,10 +30,7 @@ SELECT
 FROM
     (
         SELECT
-            T.Jakso_ID,
-            {5} AS S_Alue_ID,
-            A.Alkaen_Jakso_ID AS S_Alkaen_Jakso_ID,
-            A.Asti_Jakso_ID AS S_Asti_Jakso_ID,
+            {6} AS S_Alue_ID,
             SUM(Arvo) AS Arvo
         FROM
             FactTilastoarvo T
@@ -40,13 +38,18 @@ FROM
             INNER JOIN DimAlue A ON
                 (A.Alue_ID = T.Alue_ID AND
                 (@YearIs BETWEEN A.Alkaen_Jakso_ID AND A.Asti_Jakso_ID) AND
-                A.AlueTaso_ID = @DatabaseAreaTypeIdIs
-                {2})
+                A.AlueTaso_ID = @DatabaseAreaTypeIdIs)
+            {9}
+
+            {7}
+
         WHERE
             T.Jakso_ID = @YearIs AND
             T.Tilasto_ID = @DenominatorId
-        GROUP BY
-        {3}
+            {2}
+
+        {8}
+
         HAVING SUM(Arvo) != 0 -- Tehdään nollien rajaus mieluummin tässä, jolloin kunta voidaan liittää ulkoliitoksella
     ) Denominator
 
@@ -54,10 +57,7 @@ FROM
     -- Kysely muuten sama kuin yllä paitsi tilasto_ID-rajaus osoittajatilastolla
     LEFT JOIN (
         SELECT
-            T.Jakso_ID,
-            {5} AS S_Alue_ID,
-            A.Alkaen_Jakso_ID AS S_Alkaen_Jakso_ID,
-            A.Asti_Jakso_ID AS S_Asti_Jakso_ID,
+            {6} AS S_Alue_ID,
             SUM(Arvo) AS Arvo
         FROM
             FactTilastoarvo T
@@ -65,13 +65,18 @@ FROM
             INNER JOIN DimAlue A ON
                 (A.Alue_ID = T.Alue_ID AND
                 (@YearIs BETWEEN A.Alkaen_Jakso_ID AND A.Asti_Jakso_ID) AND
-                A.AlueTaso_ID = @DatabaseAreaTypeIdIs
-                {2})
+                A.AlueTaso_ID = @DatabaseAreaTypeIdIs)
+            {9}
+
+            {7}
+
         WHERE
             T.Jakso_ID = @YearIs AND
             T.Tilasto_ID = @NumeratorId
-        GROUP BY
-            {3}
+            {2}
+
+        {8}
+
     ) Numerator ON
         -- nämä pitäisi joinata ryhmittelyn mukaan, MainIdColumn
         Numerator.S_Alue_ID = Denominator.S_Alue_ID
@@ -81,5 +86,8 @@ FROM
     {1}
 
 WHERE Denominator.S_Alue_ID IS NOT NULL
+
+GROUP BY
+    {3}
 
 {4}
