--- a/LiiteriStatisticsService/Properties/AssemblyInfo.cs.tmpl
+++ b/LiiteriStatisticsService/Properties/AssemblyInfo.cs.tmpl
@@ -33,6 +33,7 @@ using System.Runtime.InteropServices;
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
 [assembly: AssemblyVersion("1.0.0.0")]
-[assembly: AssemblyFileVersion("1.0.0.$WCREV$")]
+[assembly: AssemblyFileVersion("1.0.1.0")]
+[assembly: AssemblyInformationalVersion("1.0.1.$GITDATE$-$GITREV$")]
 
 [assembly: log4net.Config.XmlConfigurator()]
